--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "react-scripts": "3.4.1"
   },
   "scripts": {
-    "build": "react-scripts start",
+    "build": "react-scripts build",
     "start": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
