--- a/package.json
+++ b/package.json
@@ -2,19 +2,23 @@
   "name": "wushu",
   "version": "0.1.0",
   "private": true,
+  "proxy": "http://localhost:8080",
   "dependencies": {
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
+    "express": "^4.17.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-image-mapper": "0.0.15",
     "react-router-dom": "^5.1.2",
-    "react-scripts": "3.4.1"
+    "react-scripts": "3.4.1",
+    "body-parser": "latest"
   },
   "scripts": {
+    "start": "node server",
     "build": "react-scripts build",
-    "start": "react-scripts start",
+    "startdev": "start nodemon server & react-scripts start",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
