--- a/package.json
+++ b/package.json
@@ -12,9 +12,11 @@
     "@testing-library/user-event": "^7.2.1",
     "bcrypt": "^5.0.1",
     "body-parser": "latest",
+    "cookie-parser": "^1.4.6",
     "cookie-session": "^2.0.0",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "express-session": "^1.17.2",
     "mongoose": "^5.9.9",
     "nodemon": "^2.0.14",
     "passport": "^0.5.0",
